<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_section_default"
        android:entries="@array/settings_section_entries"
        android:entryValues="@array/settings_section_values"
        android:key="@string/settings_section_key"
        android:title="@string/settings_section_label" />

    <ListPreference
        android:defaultValue="@string/settings_language_default"
        android:entries="@array/settings_language_entries"
        android:entryValues="@array/settings_language_values"
        android:key="@string/settings_language_key"
        android:title="@string/settings_language_label" />

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_entries"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

</androidx.preference.PreferenceScreen>